[package]
name = "daigunyun"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.197"
serde = "1.0.197"
toml = "0.8.10"
anyhow = "1.0.80"
tokio = { version = "1.36.0", features = ["full"] }
axum = { version = "0.7.4", features = ["tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio"] }
futures-util = "0.3.29"
log = "0.4.20"
